# Pose_Tracking

./: .gitignore  .pylintrc  LICENSE  README.md  helper_funcs.py  poseEstimation.py  poseTracking.py  pyproject.toml  validateVideoExceptions.py  valididateVideo.py
.github/workflows/: pylint.yml
qa/: qa.ipynb
qa/dataset/: annotations.xml
src/: test.py
src/pose_estimation/: capture_device.py  double_window.py  interpolator.py  keypoint_decoder.py  keypoint_encoder.py  keypoint_serializer.py  keypoint_statistics.py  keypoints.py  mediapipe.py  mediapipe_video.py  single_window.py  time_warping.py  timestamped_keypoint_serializer.py  timestamped_keypoints.py  timestamped_keypoints_decoder.py
src/pose_estimation/pre-processing/: keypoint_scaling.py
src/pose_estimation/pre_processing/: keypoint_scaling.py  orientation.py
src/pose_estimation/scoring/: angle_score.py  calc_weights.py  delayed_scoring.py  euclidean_score.py  multi_frame_scoring  multi_frame_scoring.py  score.py  score_data.py  score_normalizer.py
