[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pose_estimation"
version = "0.0.1"
dependencies = [
    "mediapipe",
    "numpy"
]

description = "Package for Pose Estimation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
estimate-image = "pose_estimation.single_window:estimate_image"
estimate-video = "pose_estimation.single_window:estimate_video"
estimate-live-comparison = "pose_estimation.double_window:estimate_live_video_comparison"
estimate-new-scoring = "pose_estimation.double_window:estimate_with_new_scoring"
profile-image = "pose_estimation.single_window:profile_image_inference"

[project.urls]
Homepage = "https://github.com/SDP-Group-8/Pose_Tracking"
Issues = "https://github.com/SDP-Group-8/Pose_Tracking/issues"